--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 </div>
 
                 <p class="text-sm text-slate-600 max-w-2xl leading-relaxed">
-                  הכלי הבא נועד לעזור לך להבין מהו הניכוי בפועל בגין שימוש ברכב.
-                  תחילה בחרי האם ההצמדה לפי תקינה — ובהתאם לכך יוצגו השדות הרלוונטיים.
+                  בלה בלה בלה טקסט של מלי
                 </p>
               </header>
 
