--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <main class="flex-1 p-6 space-y-6">
 
               <!-- Header -->
-              <header class="space-y-2">
+              <header class="space-y-2 text-center mx-auto">
                 <div class="text-slate-900 text-xl font-semibold">
                   סימולטור אומדן שווי שימוש ברכב
                 </div>
