--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
             <main class="flex-1 p-6 space-y-6">
 
               <!-- Header -->
-              <header class="space-y-2 text-center mx-auto">
+              <header style="text-align:center" class="w-full space-y-2 mx-auto">
                 <div class="text-slate-900 text-xl font-semibold">
                   סימולטור אומדן שווי שימוש ברכב
                 </div>
 
-                <p class="text-sm text-slate-600 max-w-2xl leading-relaxed">
+                <p class="text-sm text-slate-600 max-w-2xl mx-auto leading-relaxed">
                   בלה בלה בלה טקסט של מלי
                 </p>
               </header>
-
               <!-- Toggle ONLY (always visible) -->
               <section class="grid grid-cols-1 lg:grid-cols-3 gap-4">
                 <div class="rounded-3xl bg-white/65 border border-white/45 backdrop-blur-xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.14)]">
