--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
               </header>
               <!-- Toggle ONLY (always visible) -->
               <section class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-                <div class="rounded-3xl bg-white/65 border border-white/45 backdrop-blur-xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.14)]">
-                  <div class="text-sm text-slate-600">האם ההצמדה לפי תקינה?</div>
+                <div
+                    class="mx-auto w-full max-w-md rounded-3xl bg-white/65 border border-white/45 backdrop-blur-xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.14)]"
+                    style="grid-column: 1 / -1;">
+                  <div class="text-sm text-slate-600 text-center">
+                    האם ההצמדה לפי תקינה?
+                  </div>
 
-                  <div class="mt-4 flex items-center gap-3">
+                  <div class="mt-4 flex items-center justify-center gap-3">
                     <button id="btnStandardYes"
                       class="px-4 py-2 rounded-2xl border border-white/50 bg-white/70 hover:bg-white/90 transition shadow-sm text-sm">
                       כן
@@ -43,8 +47,10 @@
                       לא
                     </button>
                   </div>
+
                 </div>
               </section>
+
 
               <!-- Dynamic cards (hidden until choose yes/no) -->
               <div id="dynamicCards" class="hidden space-y-6">
