--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                           <div class="flex justify-between"><span>ביטוח לאומי (7%)</span><b>₪ <span id="nOnBenefit">0.00</span></b></div>
                           <div class="flex justify-between"><span>בריאות (5%)</span><b>₪ <span id="hOnBenefit">0.00</span></b></div>
                           <div class="pt-2 mt-2 border-t border-white/40 flex justify-between text-slate-900">
-                            <span class="font-semibold">סה״כ חיוב על זקיפת הטבת רכב</span>
+                            <span class="font-semibold">סה״כ זקיפת הטבת רכב</span>
                             <span class="font-semibold">₪ <span id="sumBenefit">0.00</span></span>
                           </div>
                         </div>
