--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                   <div class="mt-4 flex items-center justify-center gap-3">
                     <button id="btnStandardYes"
                       class="px-4 py-2 rounded-2xl border border-white/50 bg-white/70 hover:bg-white/90 transition shadow-sm text-sm">
-                      כן
+                     רכב צמוד / מוצמד
                     </button>
 
                     <button id="btnStandardNo"
                       class="px-4 py-2 rounded-2xl border border-white/40 bg-white/30 hover:bg-white/60 transition text-sm">
-                      לא
+                     רכב איגום / ת"ש
                     </button>
                   </div>
 
