--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                 <div
                     class="mx-auto w-full max-w-md rounded-3xl bg-white/65 border border-white/45 backdrop-blur-xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.14)]"
                     style="grid-column: 1 / -1;">
+                  <div class="text-sm text-slate-600 text-center">
+                   בחר סוג שימוש ברכב
+                  </div>
 
                   <div class="mt-4 flex items-center justify-center gap-3">
                     <button id="btnStandardYes"
