--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <div
                     class="mx-auto w-full max-w-md rounded-3xl bg-white/65 border border-white/45 backdrop-blur-xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.14)]"
                     style="grid-column: 1 / -1;">
-                  <div class="text-sm text-slate-600 text-center">
-                  <b> בחר סוג שימוש ברכב </b>
-                  </div>
+                    <div class="text-slate-900 font-semibold">
+                    בחר סוג שימוש ברכב 
+                    </div>
 
                   <div class="mt-4 flex items-center justify-center gap-3">
                     <button id="btnStandardYes"
@@ -245,7 +245,8 @@
                   </div>
 
                   <!-- Allowance (only when standard YES) -->
-                  <div id="field2Card" class="rounded-[26px] bg-white/55 border border-white/45 backdrop-blur-2xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.12)]">
+                  <div id="field2Card" class="rounded-[26px] bg-white/55 border 
+                     border-white/45 backdrop-blur-2xl p-5 shadow-[0_22px_50px_rgba(31,41,55,.12)]">
                     <div class="text-slate-900 font-semibold">תוספת איזון</div>
 
                     <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-3">
